--- a/projects/music_player/index.css
+++ b/projects/music_player/index.css
@@ -197,9 +197,8 @@ body {
 }
 
 .sidebar-list ul li {
-    height:30px;
     width:95%;
-    margin:10px 0;
+    margin:15px 0;
     display:block;
     text-align:left;
     line-height: 30px;
@@ -285,12 +284,16 @@ body {
     left:0;
     top:0;
     height:100px;
+    width:35vw;
     line-height:100px;
     text-align:left;
     margin:0;
     padding:0;;
     font-size:32px;
     font-weight:bold;   
+    overflow-x:hidden;
+    text-overflow:ellipsis;
+    white-space: nowrap;
 }
 
 .panel-controls {
