--- a/projects/music_player/index.css
+++ b/projects/music_player/index.css
@@ -179,10 +179,73 @@ body {
     font-weight:bold;
 }
 
+.new-playlist-toggle {
+    position:absolute;
+    top:50%;
+    right:0;
+    height:30px;
+    width:60px;
+    transform:translate(-20px, -50%);
+    text-align:center;
+    line-height:30px;
+    font-size:16px;
+    color:#fff;
+    border:1px solid #fff;
+    border-radius:5px;
+    cursor:pointer;
+}
+
+.new-playlist-form {
+    position:relative;
+    float:left;
+    height:10vh;
+    width:100%;
+    margin:0;
+    padding:0;
+    border-bottom:1px solid rgba(255, 255, 255, 0.486);
+}
+
+.new-playlist-name {
+    position:relative;
+    float:left;
+    height:10vh;
+    width:40%;
+    line-height:10vh;
+    outline:none;
+    border:none;
+    color:#fff;
+    text-align:left;
+    padding-left:20px;
+    font-size:14px;
+    background:none;
+}
+
+.new-playlist-submit {
+    position:absolute;
+    height:30px;
+    width:60px;
+    top:50%;
+    right:0;
+    transform:translate(-20px, -50%);
+    text-align:center;
+    line-height:30px;
+    font-size:16px;
+    color:#fff;
+    border:1px solid #fff;
+    border-radius:5px;
+    cursor:pointer;
+    transition:all .1s ease-in-out
+}
+
+.new-playlist-submit:hover, .new-playlist-toggle:hover {
+    background:#fff;
+    color:rgb(100, 111, 172);
+}
+
 .sidebar-list {
     position:relative;
     float:left;
-    height:80vh;
+    height:70vh;
     width:100%;
     margin:0;
     padding:0;
