fix options and shuffle/queue

--- a/projects/music_player/index.css
+++ b/projects/music_player/index.css
@@ -848,4 +848,61 @@ body {
     transition:width 0.05s linear;
 }
 
+.success-message {
+    position: absolute;
+    top:50%;
+    left:300vw;
+    transform:translate(-50%,-50%);
+    height:100px;
+    width:250px;
+    border-radius:10px;
+    background:rgba(29, 50, 77, 0.5);
+    padding:0;
+    z-index:1000;
+}
 
+@keyframes appear {
+    0% {
+        opacity:0;
+    }
+    50% {
+        opacity:0.4;
+    }
+    100% {
+        opacity:1;
+    }
+}
+
+.success-message-visible {
+    left:50%;
+    animation:appear .2s ease-in-out;
+}
+
+.success-message-inner {
+    position:relative;
+    height:100px;
+    width:250px;
+    margin:0;
+    padding:0;
+}
+
+.success-check {
+    position:absolute;
+    top:50%;
+    left:0%;
+    transform:translate(15px,-50%);
+    margin:0;
+}
+
+#success-message-text {
+    display:block;
+    position:absolute;
+    top:50%;
+    right:0%;
+    transform:translate(-20%,-50%);
+    height:100px;
+    line-height:100px;
+    text-align:left;
+    font-size:18px;
+    color:#fff;
+}
