--- a/projects/startpage/css/index.css
+++ b/projects/startpage/css/index.css
@@ -24,6 +24,7 @@ body {
 	font-family: LucidaSansTypewriter;
 	overflow:hidden;
 
+	background-size: 100% auto;
 	background-repeat: no-repeat;
 
 }
