--- a/projects/startpage/css/index.css
+++ b/projects/startpage/css/index.css
@@ -24,7 +24,7 @@ body {
 	font-family: LucidaSansTypewriter;
 	overflow:hidden;
 
-	background-size: 100% auto;
+	background-size: cover;
 	background-repeat: no-repeat;
 
 }
@@ -307,7 +307,7 @@ div.window-bg-img {
 	height:100vh;
 	width:100vw;
 
-	background-size:100% auto;
+	background-size: cover;
 	background-repeat:no-repeat;
 
 }
